--- a/modules/book/build.gradle
+++ b/modules/book/build.gradle
@@ -6,11 +6,6 @@ plugins {
 android {
     compileSdk = compile_sdk_version
     namespace 'me.ag2s'
-    kotlin {
-        jvmToolchain {
-            languageVersion.set(JavaLanguageVersion.of(17))
-        }
-    }
     defaultConfig {
         minSdk 21
         targetSdk 35
@@ -20,8 +15,11 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
     }
     lint {
         checkDependencies true
