--- a/modules/rhino/build.gradle
+++ b/modules/rhino/build.gradle
@@ -8,11 +8,11 @@ plugins {
 android {
     compileSdk = compile_sdk_version
     namespace 'com.script'
-    kotlin {
-        jvmToolchain {
-            languageVersion.set(JavaLanguageVersion.of(17))
-        }
-    }
+//    kotlin {
+//        jvmToolchain {
+//            languageVersion.set(JavaLanguageVersion.of(17))
+//        }
+//    }
     defaultConfig {
         minSdk 21
         targetSdk 35
@@ -21,8 +21,11 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
     }
     lint {
         checkDependencies true
